--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,10 @@
 title: sunaba
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  The open source 3D sandbox game
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
+twitter_username: mintkatDev
 github_username:  m1ntkat
 
 # Build settings
@@ -53,3 +51,7 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+domain: m1ntkat.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+url: https://m1ntkat.github.io  # the base hostname and protocol for your site, e.g. http://example.com
+baseurl: /sunaba-site/      # place folder name if the site is served in a subfolder
