--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: sunaba
-email: your-email@example.com
+email: sunabagame@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   The open source 3D sandbox game
 baseurl: "" # the subpath of your site, e.g. /blog
