--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,6 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 
-domain: m1ntkat.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
-url: https://m1ntkat.github.io  # the base hostname and protocol for your site, e.g. http://example.com
-baseurl: /sunaba-site/      # place folder name if the site is served in a subfolder
+domain: SunabaGame.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+url: https://SunabaGame.github.io  # the base hostname and protocol for your site, e.g. http://example.com
+baseurl: /      # place folder name if the site is served in a subfolder
