--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,6 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 
-domain: sunabagame.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
-url: https://sunabagame.github.io  # the base hostname and protocol for your site, e.g. http://example.com
+domain: sunaba.ga       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+url: https://sunaba.ga  # the base hostname and protocol for your site, e.g. http://example.com
 baseurl: /      # place folder name if the site is served in a subfolder
