--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: mintkatDev
-github_username:  TheSunabaProject
+github_username:  m1ntkat
 
 # Build settings
 theme: minima
@@ -52,6 +52,6 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 
-domain: sunaba.ga       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
-url: https://sunaba.ga  # the base hostname and protocol for your site, e.g. http://example.com
+domain: m1ntkat.github.io/sunaba-site      # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+url: https://m1ntkat.github.io/sunaba-site/  # the base hostname and protocol for your site, e.g. http://example.com
 baseurl: /      # place folder name if the site is served in a subfolder
