--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,9 @@ title: sunaba
 email: sunabagame@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   The open source 3D sandbox game
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+domain: m1ntkat.github.io      # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+baseurl: "/sunaba-site" # the subpath of your site, e.g. /blog
+url: "https://m1ntkat.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: mintkatDev
 github_username:  m1ntkat
 
@@ -52,6 +53,3 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 
-domain: m1ntkat.github.io/sunaba-site      # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
-url: https://m1ntkat.github.io/sunaba-site/  # the base hostname and protocol for your site, e.g. http://example.com
-baseurl: /      # place folder name if the site is served in a subfolder
