--- a/_config.yml
+++ b/_config.yml
@@ -1,34 +1,13 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-
 title: sunaba
 email: sunabagame@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
+description: >-
   The open source 3D sandbox game
-domain: m1ntkat.github.io      # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
-baseurl: "/sunaba-site" # the subpath of your site, e.g. /blog
-url: "https://m1ntkat.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+domain: m1ntkat.github.io 
+baseurl: "/sunaba-site"
+url: "https://m1ntkat.github.io"
 twitter_username: mintkatDev
 github_username:  m1ntkat
 
-# Build settings
 theme: minima
 plugins:
   - jekyll-feed
