Updated site look

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Sunaba
+title: sunaba
 email: sunabagame@gmail.com
 description: >-
-  The open source 3D sandbox game
+  The 3D sandbox game
 domain: sunaba.gg 
 baseurl: "/"
 url: "https://sunaba.gg"
