--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,10 @@ plugins:
   - jekyll-feed
   - jekyll-remote-theme
 
+sass:
+  load_paths:
+    - _sass
+
 defaults:
   - scope:
       path : "assets/images"
